2007-06-12 Arjen Markus  <arjenmarkus@users.sourceforge.net>
        * plotchart.man: Documented a tip by Bernhard Wallner (number of
                         series can be floating-point)
        * plotaxis.tcl: Corrected a few typos in drawing the legend
        * plotdemos1.tcl: Apply Bernhard's tip to see the effect

2007-06-02 Arjen Markus  <arjenmarkus@users.sourceforge.net>
        * plotchart.man: Documentation of background options, 3D ribbon charts
        * plotchart.tcl: 3D ribbon plot added
        * plotpriv.tcl: Support for extra background options and filling data series
        * plotannot.tcl: Image and gradient background options, 3D ribbon charts
        * plotdemos2.tcl: Demonstration of background options
        * plotbus.test: Demonstration of 3D ribbon charts

2007-05-28 Arjen Markus  <arjenmarkus@users.sourceforge.net>
        * plotchart.man: Documentation of rchart subcommand
        * plotchart.tcl: Support for drawing an R-chart
        * plotpriv.tcl: Support for drawing an R-chart
        * plotdemos6.tcl: Demonstration of R-chart

2007-05-27 Arjen Markus  <arjenmarkus@users.sourceforge.net>
        * plotchart.man: Documentation of dot subcommand
        * plotchart.tcl: Support for drawing dots
        * plotpriv.tcl: Support for drawing dots, corrected mistakes in vector drawing
        * plotdemos6.tcl: Demonstration of dots and vectors

2007-05-26 Arjen Markus  <arjenmarkus@users.sourceforge.net>
        * plotchart.man: Documentation of right-hand axis, vectors
        * plotchart.tcl: Support for right-hand axis, vectors
        * plotpriv.tcl: Support for drawing vectors
        * plotaxis.tcl: Support for right-hand axis, tickmarks
        * plot3d.tcl: Draw tickmarks at 3D axes
        * scaling.tcl: Suppress testing output (time axis)

2007-05-14 Arjen Markus  <arjenmarkus@users.sourceforge.net>
        * plotchart.tcl: Added an interval and a trend method for XY plots